# block_man

./: CMakeLists.txt  README.md  mingw.cmd
libraries/cute_framework/: Findcute.cmake
libraries/cute_framework/include/: cute_clipboard.h
libraries/cute_framework/msvc/Debug/v142/: cute.lib
libraries/cute_framework/msvc/Release/v142/: cute.lib
src/: main.cpp  world.cpp
src/components/: animator.h
src/systems/: shadow_system.cpp
